# secure-python-package-template

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  scorecards.yml
newsfragments/: 20221209_152834_sethmichaellarson.md  20221211_201712_sethmichaellarson.md  20221228_163248_sethmichaellarson_dependabot_secure_and_majors.md  20230110_083808_seth.larson.md  20230422_143342_sethmichaellarson.md  title_template.j2
requirements/: publish.in  publish.txt  test.txt
src/secure_package_template/: __init__.py  _version.py
tests/: test_secure_package_template.py
