[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "secure_package_template"
description = "Template for a Python package with a secure project host and package repository configuration."
authors = [{name = "Seth Michael Larson", email = "sethmichaellarson@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7,<4"
dynamic = ["version"]

[project.urls]
Home = "https://github.com/sethmlarson/secure-python-package-template"
